--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -71,13 +71,21 @@ html {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-bottom: 1000px;
+    margin-bottom: 0;
     height: 300px;
     width: 100vw;
     /* gap: 4rem; */
     background-color: black;
-    
-}
+}    
+.custom-footer {
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+
+}    
+
 .derd
 {
     font-size:70px;
